# qec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COLAB_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  OUTSTANDING_ISSUES.md  Project Tesseract_ Software-Defined Fault Tolerance.md  README.md  VALIDATION_GUIDE.md  profile_decoder.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: sinter_full_benchmark.py
docs/: TECHNICAL_REPORT.md
notebooks/: 01_benchmark_demo.py  02_union_find_comparison.py
scripts/: benchmark_standard.py  benchmark_stress.py  generate_docs.py  generate_plots.py
src/asr_mp/: __init__.py  decoder.py  dem_utils.py  noise_models.py  union_find_decoder.py
tests/: conftest.py  test_decoder.py  test_dem_utils.py  test_integration.py  test_noise_models.py
