[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-mp-decoder"
version = "1.0.0-alpha"
description = "Adaptive Soft-Reliability Message Passing (ASR-MP) Kernel for Drift-Resilient Quantum Error Correction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Justin Arndt", email = "justin@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["quantum", "error-correction", "qec", "belief-propagation", "decoder"]
dependencies = [
    "stim>=1.12.0",
    "sinter>=1.12.0",
    "pymatching>=2.0.0",
    "ldpc>=2.0.0",
    "fusion-blossom>=0.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/justinarndt/asr-mp-decoder"
Documentation = "https://github.com/justinarndt/asr-mp-decoder#readme"
Repository = "https://github.com/justinarndt/asr-mp-decoder.git"
Issues = "https://github.com/justinarndt/asr-mp-decoder/issues"

[project.scripts]
asr-benchmark = "asr_mp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
